# Guidelines

./: .gitignore  Autoencoders Keras.ipynb  CV_Week_Отборочное_задание.ipynb  Django on debian tutorial.txt  Django-apache web project deploy tutorial.txt  Docker BD setup.sh  GCloud web hosting for wordpress tutorial.txt  Keras Autoencoders 2.ipynb  Keras Transfer Learning.ipynb  Keras sample code.ipynb  Materials for ML system design.txt  NLP-tfidf.ipynb  NLP_RNN_name_generator.ipynb  Often used code.txt  Pandas exploratory.ipynb  Pandas guide.py  Pandas_sql.ipynb  PyTorch fashion MNIST CNN tutorial.ipynb  Pytorch DeiT optimization.ipynb  Pytorch MNIST CNN with Summary tutorial.ipynb  Pytorch MNIST NN from scratch.ipynb  Pytorch MNIST transfer learning tutorial.ipynb  Pytorch MNIST visual transformer.ipynb  Pytorch Unet.ipynb  Pytorch attention_is_all_you_need from scratch.ipynb  Pytorch image baseline.ipynb  Pytorch neural network from scratch.ipynb  Pytorch neural networks tutorial.ipynb  Pytorch vision_finetuning_instance_segmentation.ipynb  Pytorch visual transformer.ipynb  README.md  Reinforcement learning.ipynb  Stepik-intro_to_DS.ipynb  Timeseries_2_ARIMA_Models_tutorial.ipynb  Timeseries_PyData_LA_2018_Tutorial.ipynb  attention_is_all_you_need.ipynb  module04_mnist_fc.ipynb  module05_mnist_conv.ipynb  pyproject.toml  Автоэнкодеры Keras 2.ipynb  (+5 more)
ci_utils/: .gitlab-ci.yml
ci_utils/ci-config/: docker-compose.yml.tmpl  env.prod
ci_utils/ci-script/: build.sh  deploy.sh
cp_utils/: main.py  output.txt
cp_utils/algoritms/: dinamic_knapsack.py  dinamic_prog_1.py  greedy_1.py  greedy_2.py  howto_binsearch.py  howto_edit_distance.py  howto_fib.py  z_algo.py  (+6 more)
ds_utils/: PCA.ipynb  PSI.py  parallel.py  publish_to_huggingface.py  utils.py
fastai/: minai_example.ipynb
stable_diffusion/: stable-diffusion-dreambooth.ipynb
(+9 files in other folders)
