[tool.poetry]
name = "guidelines"
version = "0.1.0"
description = ""
authors = ["asFrants <as.fratnsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
matplotlib = "^3.8.0"
imageio = "^2.31.3"
pyyaml = "^6.0.1"
tensorboard = "^2.14.0"
wasabi = "^1.1.2"
tqdm = "^4.66.1"
iprogress = "^0.4"
seaborn = "^0.13.0"
kaggle = "^1.5.16"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
numpy = "1.24.1"
diffusers = "^0.25.0"
transformers = "4.25.1"
ftfy = "^6.1.3"
accelerate = "^0.25.0"
torchvision = "^0.16.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
